# server/src/channels/types.rs
@@ -1,4 +1,4 @@
-pub use hamlet_protocol::{Channel, ChannelList, ChannelType, CreateChannel};
+pub use hamlet_protocol::{Channel, ChannelList, ChannelType, CreateChannel, RenameChannel};
 use sea_orm::DbErr;
 
 pub(super) fn parse_channel_type(value: &str) -> Result<ChannelType, DbErr> {
